update function drop

--- a/index.html
+++ b/index.html
@@ -10,212 +10,7 @@
 </head>
 
 <body>
-  <div id="app">
-    <!-- <div class="border">
-      <div class="box">
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-        <div class="net"></div>
-      </div>
-    </div> -->
-  </div>
+  <div id="app"></div>
   <script src="./dist/main.js"></script>
 </body>
 
